# VideoCaption

./: .gitignore  README.md  change_jsonl.py  pyproject.toml  run.sh  run_pipeline.sh  test_path.py  test_video.py
configs/: agibot_action.yaml  agibot_scene.yaml  agirobot_action.yaml  agirobot_scene.yaml  describe.yaml  fusion_caption.yaml  skycaption.yaml  test_action.yaml
scripts/: change_jsonl.py  download_model.py  merge_action_to_scene.py  merge_agibot.py  merge_final_video_captions.py  prepare_agirobot_data.py
video_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
video_pipeline/cli/: launch.py  run.py  test_video_processing.py  worker.py
video_pipeline/config/: loader.py  schema.py
video_pipeline/data/: __init__.py  base.py  collate.py  first_frame.py  jsonl_reader.py  pure_text.py  qwen_image.py  qwen_video.py  registry.py
video_pipeline/engine/: vllm_runner.py
video_pipeline/io/: jsonl_consolidator.py  jsonl_writer.py  resume.py
video_pipeline/tasks/: __init__.py  agibot.py  agirobot.py  base.py  describe.py  fusion_caption.py  registry.py  skycaption.py  structured_caption.py
video_pipeline/utils/: dist.py  logging.py  mp.py  progress.py  stdio.py
